force-app/main/default/objects/UMO__c/UMO__c.object-meta.xml
<CustomObject>
    <label>UMO</label>
    <nameField>
        <displayFormat>UMO-{00000}</displayFormat>
        <label>UMO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UMOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>