force-app/main/default/objects/UMO__c/fields/Date_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Date_Ordered__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Ordered</label>
    <required>true</required>
    <type>Date</type>
</CustomField>