force-app/main/default/objects/UMO__c/fields/Job_Finished__c.field-meta.xml
<CustomField>
    <fullName>Job_Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Finished</label>
    <type>Checkbox</type>
</CustomField>