force-app/main/default/objects/UMO__c/fields/Start_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_By_Date__c</fullName>
    <label>Start By Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>