force-app/main/default/objects/UMO__c/fields/Tracking_Numer__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Numer__c</fullName>
    <label>Tracking Numer</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>