force-app/main/default/objects/UMO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date_Ordered__c</columns>
    <columns>Klient_Project__c</columns>
    <columns>Ticket_Number__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Start_By_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Job_Finished__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>